fixed menu alignment problem

--- a/public/stylesheets/simplydo.css
+++ b/public/stylesheets/simplydo.css
@@ -135,7 +135,6 @@ p.title {
 	float:left;
 	width:180px;
 	margin-left:20px;
-	padding-top: 1em;
 }
 
 #toDoLists h2 {
@@ -143,6 +142,7 @@ p.title {
   font-size: 1em;
   color: #AAA;
   margin-bottom: 0.3em;
+  font-weight: normal;
 }
 
 #toDoLists ul {
